# mide

./: .project  FORK.md  README.md  kdeadmin-1.1.2.lsm  kdebase-1.1.2.lsm  kdegames-1.1.2.lsm  kdegraphics-1.1.2.lsm  kdelibs-1.1.2.lsm  kdemultimedia-1.1.2.lsm  kdenetwork-1.1.2.lsm  kdesupport-1.1.2.lsm  kdetoys-1.1.2.lsm  kdeutils-1.1.2.lsm  korganizer-1.1.2.lsm
PROJECT/: tree.html
kdebase-1.1.2/kaudio/: io_oss.cpp
kdegraphics-1.1.2/kfract/: .cvsignore
kdelibs-1.1.2/: CMakeLists.txt  ChangeLog
kdelibs-1.1.2/cmake/: FindKDE1.cmake  FindQt2.cmake  Qt2Macros.cmake
kdelibs-1.1.2/debian/: changelog  control  rules
kdelibs-1.1.2/kab/: CMakeLists.txt
kdelibs-1.1.2/kdecore/: CMakeLists.txt  kconfigbase.cpp
kdelibs-1.1.2/kdeui/: CMakeLists.txt  kslider.cpp
kdelibs-1.1.2/kfile/: CMakeLists.txt
kdelibs-1.1.2/kfmlib/: CMakeLists.txt
kdelibs-1.1.2/khtmlw/: CMakeLists.txt
kdelibs-1.1.2/kspell/: CMakeLists.txt
kdelibs-1.1.2/mediatool/: CMakeLists.txt
kdemultimedia-1.1.2/kmid/player/: .cvsignore
kdesupport-1.1.2/giflib30/: FORK.md
kdetoys-1.1.2/: Makefile.in  aclocal.m4  config.h.in  configure  configure.in  subdirs
kdetoys-1.1.2/kmoon/: Makefile.in  kmoon.cpp
kdetoys-1.1.2/kmoon/pics/: Makefile.in
kdetoys-1.1.2/kworldwatch/: Makefile.in
kdetoys-1.1.2/kworldwatch/pics/: Makefile.in
kdetoys-1.1.2/mouse/: Makefile.am  Makefile.in
kdetoys-1.1.2/po/: Makefile.am  Makefile.in
kdetoys-1.1.2/po/br/: Makefile.in  kmoon.gmo  kworldwatch.gmo
kdetoys-1.1.2/po/cs/: Makefile.in  kmoon.gmo  kworldwatch.gmo
kdetoys-1.1.2/po/da/: Makefile.in  kmoon.gmo  kworldwatch.gmo
kdetoys-1.1.2/po/de/: Makefile.in  kmoon.gmo  kworldwatch.gmo
kdetoys-1.1.2/po/es/: Makefile.in  kmoon.gmo  kworldwatch.gmo
kdetoys-1.1.2/po/et/: Makefile.in  kmoon.gmo  kworldwatch.gmo
kdetoys-1.1.2/po/fi/: Makefile.in  kmoon.gmo  kworldwatch.gmo
kdetoys-1.1.2/po/fr/: Makefile.in  kmoon.gmo  kworldwatch.gmo
kdetoys-1.1.2/po/hr/: Makefile.in  kmoon.gmo  kworldwatch.gmo
kdetoys-1.1.2/po/is/: Makefile.in  kmoon.gmo  kworldwatch.gmo
kdetoys-1.1.2/po/ja/: Makefile.in  kmoon.gmo  kworldwatch.gmo
kdetoys-1.1.2/po/no/: Makefile.in  kmoon.gmo  kworldwatch.gmo
kdetoys-1.1.2/po/pl/: Makefile.in  kmoon.gmo  kworldwatch.gmo
kdetoys-1.1.2/po/pt/: Makefile.in  kmoon.gmo  kworldwatch.gmo
kdetoys-1.1.2/po/pt_BR/: Makefile.in  kmoon.gmo  kworldwatch.gmo
kdetoys-1.1.2/po/ro/: Makefile.in  kworldwatch.gmo
kdetoys-1.1.2/po/sk/: Makefile.in  kmoon.gmo  kworldwatch.gmo
kdetoys-1.1.2/po/sl/: Makefile.in  kmoon.gmo  kworldwatch.gmo
kdetoys-1.1.2/po/sv/: Makefile.in  kmoon.gmo  kworldwatch.gmo
kdetoys-1.1.2/po/zh_CN.GB2312/: Makefile.in  kmoon.gmo
kdeutils-1.1.2/: Makefile.in  configure.in  subdirs
kdeutils-1.1.2/ark/: Makefile.in
kdeutils-1.1.2/ark/doc/: Makefile.in
kdeutils-1.1.2/kab/: Makefile.in
kdeutils-1.1.2/kab/doc/: Makefile.in
kdeutils-1.1.2/karm/: Makefile.in
kdeutils-1.1.2/karm/doc/: Makefile.in
kdeutils-1.1.2/karm/support/: Makefile.in
kdeutils-1.1.2/kcalc/: Makefile.in  kcalc.h
kdeutils-1.1.2/kcalc/doc/: Makefile.in
kdeutils-1.1.2/kedit/: Makefile.in
kdeutils-1.1.2/kedit/docs/: Makefile.in
kdeutils-1.1.2/kedit/pixmaps/: Makefile.in
kdeutils-1.1.2/kfloppy/: Makefile.in
kdeutils-1.1.2/kfloppy/doc/: Makefile.in
kdeutils-1.1.2/khexdit/: Makefile.in
kdeutils-1.1.2/khexdit/doc/: Makefile.in
kdeutils-1.1.2/kjots/: Makefile.in
kdeutils-1.1.2/kjots/doc/: Makefile.in
kdeutils-1.1.2/kjots/icons/: Makefile.in
kdeutils-1.1.2/klipper/: Makefile.in
kdeutils-1.1.2/kljettool/: Makefile.in
kdeutils-1.1.2/kljettool/docs/: Makefile.in
kdeutils-1.1.2/kljettool/support/: Makefile.in
kdeutils-1.1.2/klpq/: Makefile.in
kdeutils-1.1.2/klpq/doc/: Makefile.in
kdeutils-1.1.2/knotes/: Makefile.in
kdeutils-1.1.2/knotes/docs/: Makefile.in
kdeutils-1.1.2/kpm/: Makefile.in
kdeutils-1.1.2/kpm/docs/: Makefile.in
kdeutils-1.1.2/kpm/icons/: Makefile.in
kdeutils-1.1.2/ktop/: Makefile.in
kdeutils-1.1.2/ktop/doc/: Makefile.in
kdeutils-1.1.2/ktop/pics/: Makefile.in
kdeutils-1.1.2/kwrite/: Makefile.in
kdeutils-1.1.2/po/: Makefile.in
korganizer-1.1.2/: AUTHORS  BUGS  ChangeLog  Makefile.am  Makefile.in  NEWS  README  TODO  acconfig.h  config.h.in  configure  configure.in  korganizer.lsm  korganizer.spec  makechangelog
korganizer-1.1.2/debian/: README.debian  changelog  conffiles  control  copyright  dirs  info  menu.in  rules  undocumented
korganizer-1.1.2/po/: Makefile.am  Makefile.in  cs.gmo  cs.po  da.gmo  da.po  de.gmo  de.po  es.gmo  es.po  fi.gmo  fi.po  fr.gmo  fr.po  hr.gmo  hr.po  is.gmo  is.po  ja.gmo  ja.po  korganizer.pot  no.gmo  no.po  pl.gmo  pl.po  pt_BR.gmo  pt_BR.po
korganizer-1.1.2/src/: Makefile.am  Makefile.in  aboutdlg.cpp  alarmdaemon.cpp  alarmdaemon.h  alarmmain.cpp  baselistview.cpp  baselistview.h  calobject.cpp  calobject.h  calprinter.cpp  calprinter.h  catdlg.cpp  catdlg.h  dateedit.cpp  dateedit.h  datevalidator.cpp  datevalidator.h  editeventwin.cpp  editeventwin.h  eventwidget.cpp  eventwidget.h  eventwin.cpp  eventwin.h  eventwindetails.cpp  eventwindetails.h  eventwingeneral.cpp  eventwingeneral.h  eventwinrecur.cpp  eventwinrecur.h  kagenda.cpp  kagenda.h  kdated.cpp  kdated.h  kdatenav.cpp  kdatenav.h  kdpdatebutton.cpp  kdpdatebutton.h  kdpevent.cpp  kdpevent.h  (+53 more)
korganizer-1.1.2/src/attic/: mtestit.cpp
korganizer-1.1.2/src/attic/parser/: lex.yy  lex.yy.c
korganizer-1.1.2/src/doc/: Makefile.am  Makefile.in
korganizer-1.1.2/src/doc/en/: Makefile.am  Makefile.in  korganizer-1.html  korganizer-10.html  korganizer-2.html  korganizer-3.html  korganizer-4.html  korganizer-5.html  korganizer-6.html  korganizer-7.html  korganizer-8.html  korganizer-9.html  korganizer.html  korganizer.nif  korganizer.sgml
korganizer-1.1.2/src/holidays/: Makefile.in
korganizer-1.1.2/src/pixmaps/: Makefile.am  Makefile.in  alarmd-disabled.xpm  korganizer.xpm  todolist.xpm  weekicon.xpm
korganizer-1.1.2/src/sounds/: Makefile.in
korganizer-1.1.2/src/versit/: Makefile.am  Makefile.in  readme.txt  vcc.c  vcc.y
(+97 files in other folders)
