# Original Author was Kalle@kde.org
# I lifted it in some mater. (Stephan Kulow)
# I used much code from Janos Farkas

dnl Process this file with autoconf to produce a configure script.
AC_INIT(acinclude.m4) dnl a source file from your sub dir

dnl This is so we can use kde-common
AC_CONFIG_AUX_DIR(admin)

dnl AC_MSG_WARN("This Code is alpha. It may not even compile.  Use at your own risk.")
AC_CANONICAL_SYSTEM 
AC_ARG_PROGRAM

dnl Automake doc recommends to do this only here. (Janos)
AM_INIT_AUTOMAKE(kdetoys, 1.1.2) dnl searches for some needed programs

dnl make $KDEDIR the default for the installation
AC_PREFIX_DEFAULT(${KDEDIR:-/usr/local/kde})

dnl generate the config header
AM_CONFIG_HEADER(config.h) dnl at the distribution this done

dnl Checks for programs.
AC_CHECK_COMPILERS
KDE_PROG_LIBTOOL

dnl for NLS support. Call them in this order!
dnl WITH_NLS is for the po files
AM_KDE_WITH_NLS

AC_PATH_KDE

# Define a symbol, to know that we're compiling WITH kde. (for apps that
#  can compile without KDE, optionally)
AM_CONDITIONAL(KDE_INSTALLED, test "$have_kde" = "yes")

dnl Checks for libraries. 
AC_CHECK_LIB(bsd, bsd_ioctl, [LIBBSD="-lbsd"]) dnl for Linux with libc5
AC_SUBST(LIBBSD) 

AC_LANG_CPLUSPLUS
dnl Checks for header files.
AC_HEADER_DIRENT
AC_HEADER_STDC
AC_CHECK_HEADERS(fcntl.h sys/time.h unistd.h sys/types.h sys/stat.h)
AC_CHECK_HEADERS(sys/cdefs.h fnmatch.h sysent.h strings.h paths.h)
AC_CHECK_HEADERS(utmp.h sys/param.h linux/tcp.h sys/proc.h)

AC_FIND_JPEG

dnl Checks for typedefs, structures, and compiler characteristics.
AC_HEADER_TIME

dnl check if the compiler has bool
AC_CHECK_BOOL
AC_C_LONG_DOUBLE  

dnl Checks for library functions.
AC_CHECK_FUNCS(socket fabsl strdup vsnprintf) 
AC_CHECK_SETENV
AC_CHECK_GETDOMAINNAME
AC_CHECK_GETHOSTNAME 

dnl output files
topdir=`pwd`
AC_SUBST(topdir)

dnl Perform program name transformation
AC_ARG_PROGRAM

KDE_CREATE_SUBDIRSLIST

dnl this will be replaced by Makefile.am
AC_OUTPUT(Makefile kmoon/Makefile kworldwatch/Makefile mouse/Makefile po/Makefile kmoon/pics/Makefile kworldwatch/pics/Makefile po/br/Makefile po/cs/Makefile po/da/Makefile po/de/Makefile po/es/Makefile po/et/Makefile po/fi/Makefile po/fr/Makefile po/hr/Makefile po/is/Makefile po/ja/Makefile po/no/Makefile po/pl/Makefile po/pt/Makefile po/pt_BR/Makefile po/ro/Makefile po/sk/Makefile po/sl/Makefile po/sv/Makefile po/zh_CN.GB2312/Makefile )
